# kortex_playground

./: CMakeLists.txt  README.md  package.xml
data/: .~lock.test.csv#  test.csv
include/kinova_teleop/: kinova_controller.hpp
launch/: bring_up_robot.launch  kinova_vision.launch  kortex_driver.launch  teleop_vr.launch
nodes/: find_vive_hz.py  keyboard_controller.py  kinova_teleop_node.cpp  training_data_recorder.py  vr_controller.py
rviz/: view.rviz
src/: kinova_controller.cpp
test/: arm_example.launch  arm_position_test.launch  bring_up_robot.launch  example_arm_movement.py  joint_velocity_publisher.py  kdl_test.cpp
